src/test/ui/issues/issue-56943.stderr
error[E0308]: mismatched types
  --> $DIR/issue-56943.rs:6:29
   |
LL |     let _: issue_56943::S = issue_56943::S2;
   |                             ^^^^^^^^^^^^^^^ expected struct `S`, found struct `S2`
   |
   = note: expected type `S`
              found type `S2`
            reachable by `use issue_56943::{S2, S};`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
